Fixing body shadow bug on safari n firefox
The body shadow gradient in Safari n firefox didn’t look well. Gradient
start to gradient end have to use exact same color with different
opacity. Use rgba() + 0 opacity for the gradient start instead of fixed
rgba(0,0,0,0)

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -20,13 +20,13 @@ body {
 		left: 0;
 		height: 150px;
 
-		background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, $color__background-body 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,$color__background-body)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,$color__background-body 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,$color__background-body 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,$color__background-body 100%); /* IE10+ */
-		background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,$color__background-body 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */		
+		background: -moz-linear-gradient(top, rgba(245, 245, 245, 0) 0%, $color__background-body 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(245, 245, 245, 0)), color-stop(100%,$color__background-body)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top, rgba(245, 245, 245, 0) 0%,$color__background-body 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top, rgba(245, 245, 245, 0) 0%,$color__background-body 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top, rgba(245, 245, 245, 0) 0%,$color__background-body 100%); /* IE10+ */
+		background: linear-gradient(to bottom, rgba(245, 245, 245, 0) 0%,$color__background-body 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F5F5F5', endColorstr='#F5F5F5',GradientType=0 ); /* IE6-9 */		
 	}
 }
 
