--- a/style.css
+++ b/style.css
@@ -1303,19 +1303,19 @@ body.not-touch-device:after {
   right: 0;
   left: 0;
   height: 150px;
-  background: -moz-linear-gradient(top, transparent 0%, #F5F5F5 100%);
+  background: -moz-linear-gradient(top, rgba(245, 245, 245, 0) 0%, #F5F5F5 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(100%, #F5F5F5));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(245, 245, 245, 0)), color-stop(100%, #F5F5F5));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, transparent 0%, #F5F5F5 100%);
+  background: -webkit-linear-gradient(top, rgba(245, 245, 245, 0) 0%, #F5F5F5 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, transparent 0%, #F5F5F5 100%);
+  background: -o-linear-gradient(top, rgba(245, 245, 245, 0) 0%, #F5F5F5 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, transparent 0%, #F5F5F5 100%);
+  background: -ms-linear-gradient(top, rgba(245, 245, 245, 0) 0%, #F5F5F5 100%);
   /* IE10+ */
-  background: linear-gradient(to bottom, transparent 0%, #F5F5F5 100%);
+  background: linear-gradient(to bottom, rgba(245, 245, 245, 0) 0%, #F5F5F5 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F5F5F5', endColorstr='#F5F5F5',GradientType=0 );
   /* IE6-9 */
 }
 
